--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/aralar
+spring.datasource.url=jdbc:postgresql://localhost:5432/teste
 spring.datasource.username=postgres
 spring.datasource.password=1924
 spring.jpa.hibernate.ddl-auto=update
